--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: U of C Stampedosaurs
 markdown: redcarpet
 pygments: true
-baseurl: http://localhost:4000/stampedosaurs
+baseurl: http://localhost:4000
