--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 name: U of C Stampedosaurs
 markdown: redcarpet
 pygments: true
-baseurl: http://biomod2014.github.io/stampedosaurs/
+baseurl: http://localhost:4000
+##baseurl: http://biomod2014.github.io/stampedosaurs/##
