--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 name: U of C Stampedosaurs
 markdown: redcarpet
-pygments: true
-baseurl: http://localhost:4000
-##baseurl: http://biomod2014.github.io/stampedosaurs/##
+highlighter: true
+##baseurl: http://localhost:4000##
